@@ -1,3 +1,7 @@
+2000-12-19  Akim Demaille  <akim@epita.fr>
+
+	* tests/atgeneral.m4 (AT_BANNER, AT_CLEANUP): Formatting changes.
+
 2000-12-18  Pavel Roskin  <proski@gnu.org>
 
 	* Makefile.am: Add a comment explaining why suffix rules are not
